# Gobang

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Project 1 五子棋.vcxproj  README.md  main.cpp  run_console.bat
.github/workflows/: ci.yml
include/: ai.h  ai_engine.h  board.h  game_rules.h  game_state.h
src/: ai.cpp  ai_engine.cpp  board.cpp  game_rules.cpp  game_state.cpp
tests/: board_iswin_test.cpp
